cmake_minimum_required(VERSION 3.23.2)

project(leetcode_cpp CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -Wpedantic")

add_subdirectory(Problem32)
add_subdirectory(Problem75)
add_subdirectory(Problem129)
add_subdirectory(Problem139)
add_subdirectory(Problem152)
add_subdirectory(Problem159)
add_subdirectory(Problem165)
add_subdirectory(Problem179)
add_subdirectory(Problem215)
add_subdirectory(Problem300)
add_subdirectory(Problem349)
add_subdirectory(Problem356)
add_subdirectory(Problem409)
add_subdirectory(Problem440)
add_subdirectory(Problem834)
add_subdirectory(Problem841)
add_subdirectory(Problem844)
add_subdirectory(Problem861)
add_subdirectory(Problem862)
add_subdirectory(Problem881)
add_subdirectory(Problem1325)
add_subdirectory(Problem1404)
add_subdirectory(Problem1493)
add_subdirectory(Problem1608)
add_subdirectory(Problem1702)
add_subdirectory(Problem1915)
add_subdirectory(Problem2373)
add_subdirectory(Problem2441)
add_subdirectory(Problem2486)
add_subdirectory(Problem2554)
add_subdirectory(Problem2762)
add_subdirectory(Problem2812)
add_subdirectory(Problem2997)
add_subdirectory(Problem3075)
add_subdirectory(Problem3110)
